--- a/pom.xml
+++ b/pom.xml
@@ -64,15 +64,24 @@
     
     <repositories>
         <repository>
-            <id>joestr-repository</id>
-            <name>joestr's Maven Repository</name>
-            <url>https://repo.joestr.xyz/maven/repository/repository/</url>
+            <id>release-repo</id>
+            <url>https://mvn-repo.joestr.xyz/repository/releases/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
             <releases>
                 <enabled>true</enabled>
             </releases>
+        </repository>
+        <repository>
+            <id>snapshot-repo</id>
+            <url>https://mvn-repo.joestr.xyz/repository/snapshots/</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
         </repository>
     </repositories>
     
@@ -87,15 +96,24 @@
     
     <pluginRepositories>
         <pluginRepository>
-            <id>joestr-repository</id>
-            <name>joestr's Maven Repository</name>
-            <url>https://repo.joestr.xyz/maven/repository/repository/</url>
+            <id>release-repo</id>
+            <url>https://mvn-repo.joestr.xyz/repository/releases/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
             <releases>
                 <enabled>true</enabled>
             </releases>
+        </pluginRepository>
+        <pluginRepository>
+            <id>snapshot-repo</id>
+            <url>https://mvn-repo.joestr.xyz/repository/snapshots/</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
         </pluginRepository>
     </pluginRepositories>
     
